--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.17",
+    "mongoose": "5.11.15",
     "socket.io": "^3.1.1",
     "typescript": "^4.1.5",
     "validator": "^13.5.2"
