--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,19 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/lodash": "^4.14.168",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.31",
     "@types/validator": "^13.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "5.11.15",
     "socket.io": "^3.1.1",
     "typescript": "^4.1.5",
